package com.bytecause.lenslex.util

object TestTags {
    const val PASSWORD_RULES = "PASSWORD_RULES"
    const val SIGN_UP = "SIGN_UP"
    const val SIGN_IN = "SIGN_IN"
    const val SIGN_UP_ANNOTATED_STRING = "SIGN_UP_ANNOTATED_STRING"
    const val SIGN_IN_ANNOTATED_STRING = "SIGN_IN_ANNOTATED_STRING"
    const val SELECT_ORIGIN_LANG_OPTION = "SELECT_ORIGIN_LANG_OPTION"
    const val SELECT_TARGET_LANG_OPTION = "SELECT_TARGET_LANG_OPTION"
}